完成后数据初始化
Signed-off-by: hujiangyi <hujiangyi@dvt.dvt.com>

--- a/config.conf
+++ b/config.conf
@@ -1,6 +1,6 @@
 #按需修改
 [image]
-targetVersion=V1.0.0.8
+targetVersion=V1.0.0.10
 targetProductModel=CC6600-P-12
 
 #按需修改
@@ -21,8 +21,8 @@ lockTryCount=3
 [telnet]
 cmip=10.10.28.240
 port=2023
-username=topvision
-password=topvision
+username=admin
+password=admin
 
 
 #修改为你们的CC的ip
